# AgroAgent

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
agrobot/: PRD.md  README.md  __init__.py  agent.py  config.py  integration.py  prompts.py  requirements.txt
agrobot/entities/: __init__.py  customer.py
agrobot/shared_libraries/: __init__.py  callbacks.py
agrobot/sub_agents/: __init__.py  query_executer.py  rag_agent.py
agrobot/tools/: __init__.py  db.py  tools.py
customer_service/: agent.py  config.py  prompts.py
customer_service/tools/: .env  db.py  test.py  tools.py
fastapi_server/: log.py  main.py
fastapi_server/static/: index.html
fastapi_server/static/js/: app.js  audio-player.js  pcm-player-processor.js
